# ci-cd-python-lab

./: README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
calc_ci_lab.egg-info/: SOURCES.txt
src/calc/: init__.py  main__.py  ops.py
src/calc_ci_lab.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_ops.py
